--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ body {
 }
 
 /* ===================
-    ALL: Orange Theme
+    ALL: Dark Theme
    =================== */
 
 .header-container {
@@ -163,7 +163,7 @@ nav a:hover {
 
    button { display: table-cell;  width: 100%; margin-top: 16px; color: white; background-color: #406ea7}
 
-
+    header { color: white; background-color: #1f1e1e; }
 
 
 
