copy to clipboard

--- a/css/main.css
+++ b/css/main.css
@@ -378,3 +378,10 @@ nav a:hover {
         page-break-after: avoid;
     }
 }
+@reqbcast :siren: dfsfsd sd sdf
+
+FC Name: ts
+Fleet Name: sdfsdf
+Reimbursement: None
+Comms: ASCEE Ops 1
+Doctrine: AssFrigs
