--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,8 @@ nav a:hover {
 
    button { display: table-cell;  width: 100%; margin-top: 16px; color: white; background-color: #406ea7}
 
-    header { color: white; background-color: #1f1e1e; }
+   header { color: white; background-color: #1f1e1e; } 
+   footer a:visited { color: lightcyan; } /* mouse over link */
 
 
 
