--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,9 @@ nav a:hover {
    button { display: table-cell;  width: 100%; margin-top: 16px; color: white; background-color: #406ea7}
 
    header { color: white; background-color: #1f1e1e; } 
-   footer a:visited { color: lightcyan; } /* mouse over link */
+   footer a:visited { color: ligh; } /* mouse over link */
+
+   h1 img { width: 50px; height: 60px; margin-right: 12px; }
 
 
 
@@ -379,10 +381,3 @@ nav a:hover {
         page-break-after: avoid;
     }
 }
-@reqbcast :siren: dfsfsd sd sdf
-
-FC Name: ts
-Fleet Name: sdfsdf
-Reimbursement: None
-Comms: ASCEE Ops 1
-Doctrine: AssFrigs
